接口改成CompleteFuture，gateway接口上增加ResponseType